feat: add DTO to users GET
